--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test de Conexiones Humanas</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
   <div class="container">
@@ -29,10 +29,11 @@
 
   <!-- Footer con los links en la esquina inferior izquierda -->
   <div id="footer-links">
-    <a href="como-esta-armado.html">💡 ¿Cómo funciona este Test?</a>
-    <a href="conocer-mas.html">🔍 Conocer Más</a>
+    <a href="{{ url_for('como_esta_armado') }}">💡 ¿Cómo funciona este Test?</a>
+    <a href="{{ url_for('conocer_mas') }}">🔍 Conocer Más</a>
   </div>
 
-  <script src="script.js"></script>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
+
