--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test de Conexiones Humanas</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="stylesheet" href="static/styles.css">
+<script src="static/resultados.js" defer></script>
 </head>
 <body>
   <div class="container">
