--- a/templates/conocer-mas.html
+++ b/templates/conocer-mas.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conocé Más - Proyecto RedBels</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="static/styles.css">
+<script src="static/resultados.js" defer></script>
 </head>
 <body>
   <div class="container">
