--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tu Resultado - Test de Conexiones</title>
   <link rel="stylesheet" href="static/styles.css">
-<script src="static/resultados.js" defer></script>
+<script src="{{ url_for('static', filename='resultados.js') }}" defer></script>
 </head>
 <body>
   <div class="container">
