--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tu Resultado - Test de Conexiones</title>
-  <link rel="stylesheet" href="static/styles.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 <script src="{{ url_for('static', filename='resultados.js') }}" defer></script>
 </head>
 <body>
