como-esta-armado.html

--- a/templates/como-esta-armado.html
+++ b/templates/como-esta-armado.html
@@ -126,11 +126,11 @@
       </p>
     </div>
     
-    <!-- Enlaces de navegación -->
-    <p>
-      <a href="index.html">INICIO</a> | 
-      <a href="conocer-mas.html">CONOCER MÁS</a>
-    </p>
+    <!-- Footer con enlaces en el margen inferior izquierdo -->
+  <div id="footer-links">
+    <a href="index.html">INICIO</a>
+    <a href="conocer-mas.html">CONOCER MÁS</a>
+  </div>
     
     <p class="signature">Creado por @RedBels</p>
   </div>
