conocer-mas.html

--- a/templates/conocer-mas.html
+++ b/templates/conocer-mas.html
@@ -87,7 +87,13 @@
     <p>
       <a href="index.html">INICIO</a>
     </p>
-    
+
+    <!-- Footer con enlaces en el margen inferior izquierdo -->
+  <div id="footer-links">
+    <a href="index.html">INICIO</a>
+    <a href="conocer-mas.html">CONOCER MÁS</a>
+
+  </div>
     <p class="signature">
       Creado por @RedBels
     </p>
