conocer-mas.html

--- a/templates/conocer-mas.html
+++ b/templates/conocer-mas.html
@@ -99,7 +99,7 @@
 
     <!-- Footer con enlaces en el margen inferior izquierdo -->
     <div id="footer-links">
-      <a href="index.html">INICIO</a>
+      <a href="https://flask-testconexionesredbels.onrender.com/">INICIO</a>
       <a href="conocer-mas.html">CONOCER MÁS</a>
     </div>
 
