--- a/templates/conocer-mas.html
+++ b/templates/conocer-mas.html
@@ -100,7 +100,7 @@
     <!-- Footer con enlaces en el margen inferior izquierdo -->
     <div id="footer-links">
       <a href="https://flask-testconexionesredbels.onrender.com/">INICIO</a>
-      <a href="conocer-mas.html">CONOCER MÁS</a>
+      <a href="https://flask-testconexionesredbels.onrender.com/conocer-mas">CONOCER MÁS</a>
     </div>
 
     <p class="signature">Creado por @RedBels</p>
