--- a/templates/como-esta-armado.html
+++ b/templates/como-esta-armado.html
@@ -128,8 +128,8 @@
     
     <!-- Footer con enlaces en el margen inferior izquierdo -->
   <div id="footer-links">
-    <a href="index.html">INICIO</a>
-    <a href="conocer-mas.html">CONOCER MÁS</a>
+    <a href="https://flask-testconexionesredbels.onrender.com">INICIO</a>
+    <a href="https://flask-testconexionesredbels.onrender.com/conocer-mas">CONOCER MÁS</a>
   </div>
     
     <p class="signature">Creado por @RedBels</p>
