--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test de Conexiones Humanas</title>
   <link rel="stylesheet" href="static/styles.css">
-<script src="static/resultados.js" defer></script>
+  <script src="static/resultados.js" defer></script>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1ZP02BEB0W"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1ZP02BEB0W');
+  </script>
 </head>
 <body>
   <div class="container">
@@ -15,9 +25,9 @@
     <div id="intro-container">
       <h2>¿Dónde estás parado en esta conexión? 🤔</h2>
       <p>Las primeras semanas de una relación pueden ser un caos de emociones.</p>
-      <p>¿Esto avanza o es puro humo? 🔥❄️</p>
+      <p>¿Avanza o es puro humo? 🔥❄️</p>
       <p>Este test te ayudará a descubrirlo en minutos.</p>
-      <p><strong>Responde 20 preguntas en bloques de 2.</strong></p>
+      <p><strong>Son solo 20 preguntas.</strong></p>
       <button id="start-button">EMPEZAR</button>
     </div>
 
